<resources>
    <string name="app_name">Application</string>
    <string name="login">Login</string>
    <string name="texto1">1.Motivando o aumento de produtividade da equipe</string>
    <string name="conteudo1">O Brasil tem uma média de dois médicos para cada mil habitantes, proporção bem abaixo do ideal, sem falar da distribuição irregular dos profissionais pelo território nacional. Outro problema é a remuneração inferior à da rede privada, que afasta os médicos de excelência do SUS. Além disso, também faltam incentivos que estimulem a participação ativa de médicos, enfermeiros, radiologistas, entre outros profissionais.  Nesse caso, algumas medidas podem ser tomadas para melhorar a produtividade dos profissionais da saúde e também para aumentar a motivação, como, por exemplo, estabelecer metas qualitativas e quantitativas em conjunto com o time e oferecer gratificações por desempenho com base nos resultados.
    </string>
    <string name="texto2">2.Minimizando falhas de gestão com profissionais capacitados</string>
    <string name="conteudo2"> De acordo com um estudo realizado pelo TCU, problemas como a falta de remédios em hospitais públicos não estão relacionados à ausência de recursos. O que acontece, na maior parte dos casos, são falhas na gestão.  É importante que os profissionais responsáveis pelo gerenciamento de processos tenham experiência não somente na área da saúde, mas também em gestão e em funções administrativas. Também é necessário o acompanhamento de perto, cobrando resultados efetivos e o cumprimento das metas estabelecidas.   Outra solução para minimizar essas falhas são os recursos tecnológicos, como o sistema de gerenciamento de Saúde da Betha. Ele permite acesso a informações sobre as unidades gerenciadas, com diferentes indicadores sobre o município, facilitando a visualização de informações, a tomada de decisões e a gestão como um todo.
    </string>
    <string name="texto3">3.Otimizando o atendimento em prontos-socorros</string>
    <string name="conteudo3"> Uma forma de otimizar o atendimento nos prontos-socorros é oferecendo à população um aplicativo móvel, onde o usuário tem acesso aos seus agendamentos, atendimentos, medicamentos receitados e exames realizados pelos estabelecimentos de saúde do SUS. Assim, a demanda pelo atendimento presencial é diminuída e os profissionais conseguem otimizar e priorizar seus atendimentos de forma adequada.
    </string>
    <string name="texto4">4.Diminuindo a espera na recepção</string>
    <string name="conteudo4"> A informatização da rede para um sistema de gestão hospitalar é uma boa solução para esse problema. A coleta de dados por meio de prontuários eletrônicos reduz o consumo de materiais de escritório e aumenta a velocidade do atendimento, além de diminuir a chance de erros. Essa ficha informatizada disponibiliza aos profissionais exames, diagnósticos, internações e dados que ajudam em futuros tratamentos, com a possibilidade de serem acessados em qualquer lugar.
    </string>
    <string name="texto5">5.Capacitando os profissionais </string>
    <string name="conteudo5"> Entendemos, então, que um dos maiores desafios da saúde pública brasileira é formar profissionais capacitados, que sintam a necessidade de construir uma carreira e que atendam as competências necessárias para atuar no atendimento público de saúde. Além da remuneração ser inferior à da rede privada, falta, ainda, uma política de gestão com foco no reconhecimento desses profissionais. Toda essa situação acaba afastando futuros candidatos às vagas. No entanto, esse desafio pode ser combatido a partir de algumas ações.
    </string>
    <string name="texto6">6.Promovendo o atendimento familiar integrado </string>
    <string name="conteudo6"> Uma estratégia para alcançar melhores resultados no atendimento à saúde é criar um atendimento familiar integrado, para dar continuidade aos tratamentos e prevenir problemas mais graves — principalmente à parcela da população que vive de forma vulnerável.Para isso, é fundamental ter equipes multidisciplinares e capazes de realizar tarefas como:compreender a realidade das famílias e identificar os problemas de saúde a que estão expostas;executar procedimentos necessários de vigilância à saúde;assegurar a continuidade nos tratamentos;garantir assistência integral, mantendo contato com as famílias e promovendo a saúde a partir da educação sanitária;levantar discussões sobre conceito de cidadania entre as comunidades, etc.
    </string>
    <string name="texto7">7.Criando relatórios mais eficientes e confiáveis </string>
    <string name="conteudo7"> O atendimento público de saúde lida diariamente com um volume grande de informação dos pacientes, dos profissionais e das unidades. Nesse contexto, torna-se fundamental criar relatórios eficientes e confiáveis, que possibilitem maior facilidade na tomada de decisões, e melhorias na organização.Atualmente existem sistemas online desenvolvidos especificamente para ajudar na gestão de dados, permitindo, por exemplo, a visualização de prontuários com uso de filtros de busca. Outra forma de otimizar os processos, seria utilizar sistemas para gestão de relatórios médicos e receitas personalizadas, onde é possível prescrever a partir de uma base com mais de 30 mil medicamentos e que é atualizada diariamente.
    </string>
    <string name="texto8">8. Investindo em tecnologia </string>
    <string name="conteudo8"> A transformação digital traz mudanças significativas, inclusive para o atendimento público de saúde. Para hospitais, o surgimento de tecnologias capazes de auxiliar nos cuidados é imprescindível. A criação do Prontuário do Cidadão (PEC) foi apenas o primeiro passo, que abriu espaço para a inserção de outras tecnologias, como o Registro Eletrônico de Saúde (RES).De fato, a tecnologia auxilia o atendimento público de saúde de ponta a ponta, e permite a implementação de diferentes soluções. Além disso tudo, ter um planejamento estratégico é essencial e torna possível antecipar possíveis percalços e buscar melhorar cada vez mais o atendimento público de saúde.
    </string>

</resources>